opam-version: "2.0"
synopsis: "Runtime assertion checking based on Gospel"
description: """
Runtime assertion checking based on Gospel
"""
maintainer: ["Clément Pascutto <clement@pascutto.fr>"]
authors: ["Clément Pascutto <clement@pascutto.fr>"]
homepage: "https://github.com/pascutto/gospel-rtac"
dev-repo: "git+https://github.com/pascutto/gospel-rtac.git"
doc: "https://pascutto.github.io/gospel-rtac/"
bug-reports: "https://github.com/pascutto/gospel-rtac/issues"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
  name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "cmdliner"
  "fmt"
  "ppxlib" {>= "0.20.0"}
  "gospel"
  "alcotest" {with-test}
  "gospel-runtime" {with-test}
]
pin-depends: [
  [ "gospel.dev" "git+https://github.com/ocaml-gospel/gospel#1fcd3cba5f57196106d539d7b3a58722be15297c" ]
]
