opam-version: "2.0"
synopsis: "Runtime assertion checking based on Gospel"
description: """
Runtime assertion checking based on Gospel
"""
maintainer: ["Clément Pascutto <clement@pascutto.fr>"]
authors: ["Clément Pascutto <clement@pascutto.fr>"]
homepage: "https://github.com/pascutto/gospel-rtac"
dev-repo: "git+https://github.com/pascutto/gospel-rtac.git"
doc: "https://pascutto.github.io/gospel-rtac/"
bug-reports: "https://github.com/pascutto/gospel-rtac/issues"
depends: [
  "dune" {>= "2.0"}
  "gospel"
  "zarith"
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
