opam-version: "2.0"
synopsis: "OCaml Runtime Assertion Checking based on Gospel"
description: "OCaml Runtime Assertion Checking based on Gospel"
maintainer: ["Clément Pascutto <clement@pascutto.fr>"]
authors: [
  "Clément Pascutto <clement@pascutto.fr>"
  "Nicolas Osborne <nicolas.osborne@tarides.com>"
  "Samuel Hym <samuel.hym@rustyne.lautre.net>"
]
homepage: "https://github.com/ocaml-gospel/ortac"
dev-repo: "git+https://github.com/ocaml-gospel/ortac.git"
doc: "https://ocaml-gospel.github.io/ortac/"
bug-reports: "https://github.com/ocaml-gospel/ortac/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]

depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "3.8"}
  "dune-site"
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "ppxlib" {>= "0.26.0"}
  "gospel" {>= "0.2.0"}
  "alcotest" {with-test & >= "0.8.1"}
  "ortac-runtime" {with-test}
]
