opam-version: "2.0"
synopsis: "Monolith plugin for Ortac"
description: "Monolith plugin for Ortac"
maintainer: ["Nicolas Osborne <nicolas.osborne@tarides.com>"]
authors: ["Nicolas Osborne <nicolas.osborne@tarides.com>"]
homepage: "https://github.com/ocaml-gospel/ortac"
dev-repo: "git+https://github.com/ocaml-gospel/ortac.git"
doc: "https://ocaml-gospel.github.io/ortac/"
bug-reports: "https://github.com/ocaml-gospel/ortac/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "3.8"}
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "ppxlib" {>= "0.26.0"}
  "gospel"
  "monolith" {with-test & >= "20201026"}
  "pprint" {with-test}
  "ortac-core"
  "ortac-wrapper"
  "ortac-runtime-monolith" {with-test}
]
