opam-version: "2.0"
synopsis: "QCheck-stm plugin for Ortac"
description: "QCheck-stm plugin for Ortac"
maintainer: ["Nicolas Osborne <nicolas.osborne@tarides.com>"]
authors: [
  "Nicolas Osborne <nicolas.osborne@tarides.com>"
  "Samuel Hym <samuel.hym@rustyne.lautre.net>"
]
homepage: "https://github.com/ocaml-gospel/ortac"
dev-repo: "git+https://github.com/ocaml-gospel/ortac.git"
doc: "https://ocaml-gospel.github.io/ortac/"
bug-reports: "https://github.com/ocaml-gospel/ortac/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "3.8"}
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "ppxlib" {>= "0.26.0"}
  "mdx" {with-test}
  "gospel" {>= "0.2.0"}
  "qcheck-core" {with-test}
  "qcheck-stm" {with-test}
  "qcheck-multicoretests-util" {with-test}
  "ortac-core"
  "ortac-runtime"
]
