opam-version: "2.0"
synopsis: "Monolith plugin got Ortac"
description: "Monolith plugin got Ortac"
maintainer: ["Nicolas Osborne <nicolas.osborne@tarides.cmd>"]
authors: ["Nicolas Osborne <nicolas.osborne@tarides.cmd>"]
homepage: "https://github.com/ocaml-gospel/ortac"
dev-repo: "git+https://github.com/ocaml-gospel/ortac.git"
doc: "https://ocaml-gospel.github.io/ortac/"
bug-reports: "https://github.com/ocaml-gospel/ortac/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "3.0"}
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "ppxlib" {>= "0.26.0"}
  "gospel"
  "alcotest" {with-test}
  "pprint" {with-test}
  "ortac-runtime-monolith" {with-test}
  "monolith" {>= "20201026"}
]

pin-depends: [
  "gospel.dev" "git+https://github.com/ocaml-gospel/gospel#2f902ad50168a10135051904f7857bb45fe8b3f9"
]
