opam-version: "2.0"
synopsis: "Runtime library for ortac used with monolith"
description: "Runtime library for ortac used with monolith"
maintainer: "Nicolas Osborne <nicolas.osborne@tarides.fr>"
authors: "Nicolas Osborne <nicolas.osborne@tarides.fr>"
homepage: "https://github.com/ocaml-gospel/ortac"
doc: "https://pascutto.github.io/ortac/"
dev-repo: "git+https://github.com/ocaml-gospel/ortac.git"
bug-reports: "https://github.com/ocaml-gospel/ortac/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "3.0"}
  "monolith" {>= "20201026"}
  "pprint"
  "ortac-runtime"
  "fmt" {>= "0.9.0"}
  "ppxlib" {>= "0.20.0"}
]
