(library
 (public_name ortac-monolith.plugin)
 (name ortac_monolith)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries
  gospel
  cmdliner
  fmt
  ppxlib.astlib
  ortac-core
  ortac-core.register
  ortac-wrapper.plugin))

(plugin
 (name monolith)
 (package ortac-monolith)
 (libraries ortac-monolith.plugin)
 (site
  (ortac-core plugins)))
