(library
 (public_name ortac-qcheck-stm.plugin)
 (name ortac_qcheck_stm)
 (libraries cmdliner ppxlib ortac.register ortac.ortac_core gospel)
 (preprocess
  (pps ppxlib.metaquot)))

(plugin
 (name ortac-qcheck-stm)
 (package ortac-qcheck-stm)
 (libraries ortac-qcheck-stm.plugin)
 (site
  (ortac plugins)))
