(include dune.inc)

(cram
 (package ortac-qcheck-stm)
 (deps
  (package ortac-core)
  (package ortac-qcheck-stm)))

(rule
 (package ortac-qcheck-stm)
 (deps
  (package ortac-core)
  (package ortac-qcheck-stm))
 (action
  (setenv
   ORTAC_ONLY_PLUGIN
   qcheck-stm
   (ignore-stdout
    (with-stderr-to
     all_warnings_errors
     (run
      ortac
      qcheck-stm
      %{dep:all_warnings.mli}
      %{dep:all_warnings_config.ml}))))))

(rule
 (alias runtest)
 (package ortac-qcheck-stm)
 (action
  (diff all_warnings_errors.expected all_warnings_errors)))

(library
 (name module_prefix_lib)
 (modules module_prefix))

(rule
 (target module_prefix_tests.ml)
 (package ortac-qcheck-stm)
 (deps
  (package ortac-core)
  (package ortac-qcheck-stm))
 (action
  (setenv
   ORTAC_ONLY_PLUGIN
   qcheck-stm
   (with-stderr-to
    module_prefix_errors
    (run
     ortac
     qcheck-stm
     %{dep:module_prefix.mli}
     %{dep:module_prefix_config.ml}
     --module-prefix=Module_prefix_lib
     -o
     %{target})))))

(rule
 (alias runtest)
 (package ortac-qcheck-stm)
 (action
  (progn
   (diff module_prefix_errors.expected module_prefix_errors)
   (diff module_prefix_tests.expected.ml module_prefix_tests.ml))))

(test
 (name module_prefix_tests)
 (package ortac-qcheck-stm)
 (modules module_prefix_tests)
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-multicoretests-util
  ortac-runtime-qcheck-stm
  module_prefix_lib)
 (action
  (echo
   "\n%{dep:module_prefix_tests.exe} has been generated with the ortac-qcheck-stm plugin.\n")))

(executable
 (name dune_gen)
 (modules dune_gen))

(rule
 (action
  (with-stdout-to
   dune.inc.gen
   (run ./dune_gen.exe %{read-lines:dune_gen.args}))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))
