(library
 (public_name ortac-wrapper.plugin)
 (name ortac_wrapper)
 (libraries
  cmdliner
  fmt
  ppxlib
  ppxlib.astlib
  ortac-core
  ortac-core.register
  gospel)
 (preprocess
  (pps ppxlib.metaquot)))

(plugin
 (name ortac-wrapper)
 (package ortac-wrapper)
 (libraries ortac-wrapper.plugin)
 (site
  (ortac-core plugins)))
